# ASCII-Aquarium

./: .gitlab-ci.yml  README.md
ASCII_Aquarium_CYD/: ASCII_Aquarium_CYD.ino
desktop/: .gitignore  CMakeLists.txt  README.md
desktop/assets/fonts/: font16.h  glcdfont.h
desktop/docs/: KIOSK.md
desktop/packaging/: ascii-aquarium.service
desktop/src/: main.cpp
desktop/src/app/: Capture.cpp  Capture.h  Config.cpp  Config.h
desktop/src/renderer/: Color.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h
desktop/src/sim/: Aquarium.cpp  Aquarium.h  Background.cpp  Background.h  Clock.cpp  Clock.h  Lighting.cpp  Lighting.h  Props.cpp  Props.h  Rng.h
desktop/src/ui/: Hit.h  Ui.cpp  Ui.h
docs/: index.html
